@@ -1,3 +1,8 @@
+2004-08-08  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>
+
+	* src/main.cc: Move device erase in front of write fuses in case
+	of device being locked.
+
 2004-08-05  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>
 
 	* src/jtagio.cc: (deviceDefinitions): Fix flash and eeprom page
